// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InventoryMessage stories snapshot > BackOrder story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-warning"
    />
    <p
      class="text-sm font-medium text-status-warning"
    >
      <span
        class="sr-only"
      >
        Back order: 
      </span>
      Available for back order
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > InStock story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-positive"
    />
    <p
      class="text-sm font-medium text-status-positive"
    >
      <span
        class="sr-only"
      >
        Available: 
      </span>
      In stock
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > LowStock story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-warning"
    />
    <p
      class="text-sm font-medium text-status-warning"
    >
      <span
        class="sr-only"
      >
        Limited availability: 
      </span>
      Few items left
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > LowStockWithWidth story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-warning"
    />
    <p
      class="text-sm font-medium text-status-warning"
    >
      <span
        class="sr-only"
      >
        Limited availability: 
      </span>
      Few items left in width Standard
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > LowStockWithWidthOneLeft story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-warning"
    />
    <p
      class="text-sm font-medium text-status-warning"
    >
      <span
        class="sr-only"
      >
        Limited availability: 
      </span>
      1 item left in width Standard
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > OutOfStock story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-critical"
    />
    <p
      class="text-sm font-medium text-status-critical"
    >
      <span
        class="sr-only"
      >
        Not available: 
      </span>
      Out of stock
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > PreOrder story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-status-info"
    />
    <p
      class="text-sm font-medium text-status-info"
    >
      <span
        class="sr-only"
      >
        Pre-order: 
      </span>
      Available for pre-order
    </p>
  </div>
</div>
`;

exports[`InventoryMessage stories snapshot > UnknownHidden story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  />
</div>
`;

exports[`InventoryMessage stories snapshot > UnknownVisible story renders and matches snapshot 1`] = `
<div
  class="p-8"
>
  <div
    aria-atomic="true"
    class="flex items-center gap-2"
    data-slot="inventory-message"
    role="status"
  >
    <span
      aria-hidden="true"
      class="h-2 w-2 shrink-0 rounded-full bg-current text-muted-foreground"
    />
    <p
      class="text-sm font-medium text-muted-foreground"
    >
      <span
        class="sr-only"
      />
      Inventory unavailable
    </p>
  </div>
</div>
`;
